[init] porting start

--- a/MonoGamePort.csproj
+++ b/MonoGamePort.csproj
@@ -10,6 +10,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="backup archive 2-12.zip" />
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
   </ItemGroup>
