--- a/cotf_rewd.csproj
+++ b/cotf_rewd.csproj
@@ -92,5 +92,8 @@
     <None Update="Content\temp_bg.rew">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Direct2D_Render.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
