--- a/cotf_rewd.csproj
+++ b/cotf_rewd.csproj
@@ -95,5 +95,8 @@
     <None Update="Direct2D_Render.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestBed.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
