[unstable][compiles] small adjustment

--- a/cotf_rewd.csproj
+++ b/cotf_rewd.csproj
@@ -23,7 +23,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FoundationR\FoundationR.csproj" />
+    <ProjectReference Include="..\game\game.csproj" />
   </ItemGroup>
   <ItemGroup>
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
